Bugfix reality tabs depth poupulation link url

--- a/examples/realitytabs.html
+++ b/examples/realitytabs.html
@@ -76,7 +76,7 @@ const links = [
   },
   {
     name: 'Depth population',
-    url: 'depth.html',
+    url: 'depth_ml.html',
   },
   {
     name: 'Microphone',
