Change avatar ml example defauly skin to skin 2

--- a/examples/avatar_ml.html
+++ b/examples/avatar_ml.html
@@ -115,7 +115,7 @@
       container.appendChild(renderer.domElement);
 
       avatarMesh = (() => {
-        const DEFAULT_SKIN_URL = 'skin.png';
+        const DEFAULT_SKIN_URL = 'skin2.png';
 
         const mesh = skin({
           limbs: true,
