Coment out avatar example terrain meshes rendering

--- a/examples/avatar_ml.html
+++ b/examples/avatar_ml.html
@@ -180,7 +180,7 @@
         scene.add(controllerHitMesh);
       });
       
-      const terrainMeshes = [];
+      /* const terrainMeshes = [];
       const terrainMaterial = new THREE.MeshPhongMaterial({
         color: 0x666666,
       });
@@ -341,7 +341,7 @@
         setInterval(() => {
           _onMesh(updates);
         }, 100);
-      }
+      } */
 
       renderer.setAnimationLoop(animate);
     }
