--- a/examples/avatar_ml.html
+++ b/examples/avatar_ml.html
@@ -23,6 +23,7 @@
     const localQuaternion = new THREE.Quaternion();
     const localEuler = new THREE.Euler();
     const localMatrix = new THREE.Matrix4();
+    const localMatrix2 = new THREE.Matrix4();
     const localMatrixFloat32Array = new Float32Array(16);
     const localVectorFloat32Array = new Float32Array(3);
     const localVectorFloat32Array2 = new Float32Array(3);
@@ -43,6 +44,39 @@
       return mesh;
     };
     const _getControllerIndex = inputSource => inputSource.handedness === 'left' ? 0 : 1;
+
+    const _xrOffset = (position = localVector.set(0, 0, 0), quaternion = localQuaternion.set(0, 0, 0, 1), scale = localVector2.set(1, 1, 1)) => {
+      if (window.document.xrOffset) {
+        localMatrix
+          .compose(position, quaternion, scale)
+          .premultiply(
+            localMatrix2
+              .fromArray(window.document.xrOffset.matrix)
+          )
+          .decompose(position, quaternion, scale);
+      }
+    };
+    const _unXrOffset = (position = localVector.set(0, 0, 0), quaternion = localQuaternion.set(0, 0, 0, 1), scale = localVector2.set(1, 1, 1)) => {
+      if (window.document.xrOffset) {
+        localMatrix
+          .compose(position, quaternion, scale)
+          .premultiply(
+            localMatrix2
+              .fromArray(window.document.xrOffset.matrixInverse)
+          )
+          .decompose(position, quaternion, scale);
+      }
+    };
+    const _unXrOffsetDirection = direction => {
+      if (window.document.xrOffset) {
+        direction
+          .applyQuaternion(
+            localQuaternion
+              .fromArray(window.document.xrOffset.orientation)
+              .inverse()
+          );
+      }
+    };
 
     const avatarHeight = 0.5;
 
@@ -121,6 +155,7 @@
           limbs: true,
         });
         mesh.scale.multiplyScalar(avatarHeight);
+        _unXrOffset(mesh.position, mesh.quaternion, mesh.scale);
         mesh.frustumCulled = false;
 
         new Promise((accept, reject) => {
@@ -348,7 +383,11 @@
 
     const thetaRate = 1000;
     const animationTime = 1000;
-    const _getRandomWaypoint = () => new THREE.Vector3((Math.random()-0.5)*2, 0, (Math.random()-0.5)*2).multiplyScalar(3);
+    const _getRandomWaypoint = () => {
+      const waypoint = new THREE.Vector3((Math.random()-0.5)*2, 0, (Math.random()-0.5)*2).multiplyScalar(3);
+      _unXrOffset(waypoint);
+      return waypoint;
+    };
     /* const _getFurthestWaypoint = (startNode, position) => {
       const {island} = startNode;
 
@@ -367,17 +406,19 @@
     const _animateTo = endPosition => {
       const now = Date.now();
       const startPosition = avatarMesh.position.clone();
+      const upVector = new THREE.Vector3(0, 1, 0);
+      _unXrOffsetDirection(upVector);
       animation = {
         startTime: now,
         endTime: now + animationTime*startPosition.distanceTo(endPosition),
         startPosition,
         startQuaternion: avatarMesh.quaternion.clone(),
-        endQuaternion: new THREE.Quaternion().setFromUnitVectors(
-          new THREE.Vector3(0, 0, -1),
-          localVector
-            .copy(endPosition)
-            .sub(startPosition)
-            .normalize()
+        endQuaternion: new THREE.Quaternion().setFromRotationMatrix(
+          localMatrix.lookAt(
+            startPosition,
+            endPosition,
+            upVector
+          )
         ),
         endPosition,
         hitTesting: false,
@@ -397,11 +438,11 @@
 
           avatarMesh.material.uniforms.theta.value = Math.sin((now%thetaRate)/thetaRate * Math.PI*2);
 
-          rayMesh.position.copy(avatarMesh.position)
-            .add(
-              localVector
-                .set(0, avatarHeight/2, 0)
-            );
+          localVector.set(0, avatarHeight/2, 0);
+          _unXrOffsetDirection(localVector);
+          rayMesh.position
+            .copy(avatarMesh.position)
+            .add(localVector);
           rayMesh.quaternion.copy(avatarMesh.quaternion);
           rayMesh.updateMatrixWorld();
 
@@ -440,11 +481,11 @@
 
                         _animateTo(
                           avatarMesh.position.clone()
-                          .add(
-                            localVector
-                              .set(0, 0, 0.3)
-                              .applyQuaternion(avatarMesh.quaternion)
-                          )
+                            .add(
+                              localVector
+                                .set(0, 0, 0.3)
+                                .applyQuaternion(avatarMesh.quaternion)
+                            )
                         );
                       }
 
@@ -555,7 +596,8 @@
 
         if (controllerHitMesh.visible) {
           const destination = controllerHitMesh.position.clone();
-          destination.y = 0;
+          _xrOffset(localVector.copy(destination));
+          destination.y -= localVector.y;
           _animateTo(destination);
         }
       };
