--- a/examples/realitytabs.html
+++ b/examples/realitytabs.html
@@ -117,6 +117,7 @@ const localQuaternion2 = new THREE.Quaternion();
 const localEuler = new THREE.Euler(0, 0, 0, 'YXZ');
 const localEuler2 = new THREE.Euler(0, 0, 0, 'YXZ');
 const localMatrix = new THREE.Matrix4();
+const localMatrixFloat32Array = new Float32Array(16);
 
 function parseQuery(s) {
   var query = {};
@@ -2701,8 +2702,10 @@ function animate(time, frame) {
 
 const _bootFakeDisplay = async () => {
   fakeDisplay = _makeFakeDisplay();
-  camera.projectionMatrix.toArray(fakeDisplay._frameData.leftProjectionMatrix);
-  camera.projectionMatrix.toArray(fakeDisplay._frameData.rightProjectionMatrix);
+  camera.projectionMatrix.toArray();
+  fakeDisplay.setProjection(camera.projectionMatrix);
+  // camera.projectionMatrix.toArray(fakeDisplay._frameData.leftProjectionMatrix);
+  // camera.projectionMatrix.toArray(fakeDisplay._frameData.rightProjectionMatrix);
   fakeDisplay.position.set(0, 1.6, 0);
   // const canvas = renderer.domElement;
   const session = await fakeDisplay.enter({
