--- a/examples/tutorial.html
+++ b/examples/tutorial.html
@@ -102,8 +102,8 @@
       // scene.background = new THREE.Color(0x3B3961);
 
       camera = new THREE.PerspectiveCamera(60, window.innerWidth / window.innerHeight, 0.1, 1000);
-      // camera.position.set(0, 1, 0);
-      camera.lookAt(new THREE.Vector3());
+      camera.position.set(0, 1, 2);
+      // camera.lookAt(new THREE.Vector3());
       scene.add(camera);
 
       const ambientLight = new THREE.AmbientLight(0x808080);
