--- a/examples/index.html
+++ b/examples/index.html
@@ -4,11 +4,11 @@
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <meta name="theme-color" content="#008000"/>
-   <title>hands_ml</title>
-   <link rel="manifest" href="hands_ml_manifest.json">
+   <title>PWA example</title>
+   <link rel="manifest" href="manifest.json">
    <script>
     if('serviceWorker' in navigator) {
-      navigator.serviceWorker.register('/hands_ml_sw.js')
+      navigator.serviceWorker.register('/sw.js')
         .then(function() {
               console.log('Service Worker Registered');
         });
