--- a/examples/minimap_ml.html
+++ b/examples/minimap_ml.html
@@ -1,5 +1,19 @@
 <html>
   <head>
+   <meta charset="utf-8">
+   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+   <meta name="viewport" content="width=device-width, initial-scale=1">
+   <meta name="theme-color" content="#008000"/>
+   <title>minimap_ml</title>
+   <link rel="manifest" href="minimap_ml_manifest.json">
+   <script>
+    if('serviceWorker' in navigator) {
+      navigator.serviceWorker.register('/minimap_ml_sw.js')
+        .then(function() {
+              console.log('Service Worker Registered');
+        });
+    }
+   </script>
     <style>
       body {
         margin: 0;
@@ -7,6 +21,7 @@
     </style>
   </head>
   <body>
+  <h1>minimap_ml</h1>
   <script src="three.js"></script>
   <script>
     let container, scene, camera, renderer, display, controllerMeshes, rayMeshes, planeMesh, containerMesh;
