--- a/examples/reprojection.html
+++ b/examples/reprojection.html
@@ -23,7 +23,7 @@
         "uniform mat4 projectionMatrixInverse;",
         "uniform mat4 matrixWorldInverse;",
         "uniform mat4 inverseMatrix;",
-        "uniform mat4 inverseMatrix2;",
+        "uniform mat4 initialProjectionMatrixInverse;",
         "uniform mat4 initialProjectionMatrix;",
         "uniform float zNear;",
         "uniform float zFar;",
@@ -37,7 +37,7 @@
           float z_e = -(2.0 * zNear * zFar / (zFar + zNear - z_n * (zFar - zNear)));
           float zOrig = z_e;
           vec4 offset = initialProjectionMatrix * vec4(0.0, 0.0, z_e, 1.0);
-          vec4 worldPosOrig = inverseMatrix2 * vec4(position.xy, offset.z/offset.w, 1.0);
+          vec4 worldPosOrig = initialProjectionMatrixInverse * vec4(position.xy, offset.z/offset.w, 1.0);
           float zNew = worldPosOrig.z/worldPosOrig.w;
           vec4 worldPosNew = modelViewMatrix * worldPosOrig;
           gl_Position = projectionMatrix * worldPosNew;
@@ -100,9 +100,9 @@
               type:'m4',
               value: undefined !== params.inverseMatrix ? params.inverseMatrix : null
             },
-            inverseMatrix2: {
+            initialProjectionMatrixInverse: {
               type:'m4',
-              value: undefined !== params.inverseMatrix2 ? params.inverseMatrix2 : null
+              value: undefined !== params.initialProjectionMatrixInverse ? params.initialProjectionMatrixInverse : null
             },
             initialProjectionMatrix: {
               type:'m4',
@@ -198,7 +198,7 @@ function init() {
   hiddenCamera.updateMatrixWorld();
   hiddenCamera.updateProjectionMatrix();
   hiddenCamera.inverseMatrix = new THREE.Matrix4();
-  hiddenCamera.inverseMatrix2 = new THREE.Matrix4();
+  hiddenCamera.initialProjectionMatrixInverse = new THREE.Matrix4();
   hiddenCamera.initialProjectionMatrix = new THREE.Matrix4();
   hiddenCamera.size = new THREE.Vector2();
 
@@ -271,7 +271,7 @@ function init() {
     size: hiddenCamera.size,
     aspect: hiddenCamera.aspect,
     inverseMatrix: hiddenCamera.inverseMatrix,
-    inverseMatrix2: hiddenCamera.inverseMatrix2,
+    initialProjectionMatrixInverse: hiddenCamera.initialProjectionMatrixInverse,
     initialProjectionMatrix: hiddenCamera.initialProjectionMatrix,
   });
   scene.add(screenQuad);
@@ -297,7 +297,7 @@ window.addEventListener('keydown', e => {
 
   hiddenCamera.inverseMatrix.copy(hiddenCamera.matrixWorld).multiply(screenQuad.matrixWorld);
   hiddenCamera.inverseMatrix.getInverse(hiddenCamera.inverseMatrix);
-  hiddenCamera.inverseMatrix2.copy(hiddenCamera.projectionMatrixInverse);
+  hiddenCamera.initialProjectionMatrixInverse.copy(hiddenCamera.projectionMatrixInverse);
   hiddenCamera.initialProjectionMatrix.copy(hiddenCamera.projectionMatrix);
   hiddenCamera.size.set(renderTarget.width, renderTarget.height);
 
