Add requestHitTest guard to shooter_ml.html example

--- a/examples/shooter_ml.html
+++ b/examples/shooter_ml.html
@@ -192,7 +192,7 @@
             bullet.updateMatrix();
             bullet.updateMatrixWorld(true);
 
-            if (!bullet.hitTesting) {
+            if (display.session.requestHitTest && !bullet.hitTesting) {
               const startPosition = bullet.position.clone();
 
               display.session.requestHitTest(
