Small realitytabs.html gamepads tracking bugfix

--- a/examples/realitytabs.html
+++ b/examples/realitytabs.html
@@ -1871,7 +1871,7 @@ function animate(time, frame) {
   const startTimeDiff = now - startTime;
 
   const gamepads = navigator.getGamepads();
-  for (let i = 0; i < gamepads.length; i++) {
+  for (let i = 0; i < gamepads.length && i < 2; i++) {
     const gamepad = gamepads[i];
     const moveTab = moves[i];
     const boxMesh = boxMeshes[i];
@@ -2516,7 +2516,7 @@ function animate(time, frame) {
 
   const _updateButtons = () => {
     if (display) {
-      for (let i = 0; i < gamepads.length; i++) {
+      for (let i = 0; i < gamepads.length && i < 2; i++) {
         const gamepad = gamepads[i];
 
         {
