Small text.html example cleanup

--- a/examples/text.html
+++ b/examples/text.html
@@ -84,7 +84,7 @@ function init() {
   context.fillText("ideographic", 300, 75);
 
   context.textBaseline = "bottom";
-  context.fillText("bottom-glyph", 400, 75);
+  context.fillText("bottom", 400, 75);
 
   planeMesh = (() => {
     const geometry = new THREE.PlaneBufferGeometry(planeWorldWidth, planeWorldHeight)
